--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,12 @@
-name :"print the current date and time "
-on : 
-  schedule :
-    - cron : "*/15 * * * * "
-  workflow_display :
-jobs :
-  print-datetime :
-    runs-on : ubuntu-latest
-    steps :
-      -name : "current date"
-        run : "current datetime $(date)"
+name: Print the current date and time
+
+on:
+  schedule:
+    - cron: "*/15 * * * *"
+
+jobs:
+  print-datetime:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print current date
+        run: echo "Current datetime: $(date)"
